--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14",
+    "react-icons": "^5.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
